--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -20,6 +20,7 @@
   overflow: hidden;
   width: calc(33.33% - 20px);
   max-width: 340px;
+  min-width: 340px;
   height: 340px;
   margin: 0 10px 30px;  
   padding: 0;  
