--- a/src/styles/page404.css
+++ b/src/styles/page404.css
@@ -4,16 +4,18 @@
     display: flex;
     flex-direction: column;
     width: 90%;
-    height: 70%;
+    height: auto;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
 
 }
 
-.error img{
-    padding-top: 40px;
-    width: 50%;    
+
+.error h1{
+    font-size: 288px;
+    font-weight: 700;
+    margin: 0 auto;
 }
 
 .error h2{
@@ -21,6 +23,11 @@
     font-size: 36px;
     font-weight: 400;
     color: #ff6060;
+    margin-bottom: 40px;
+}
+
+.error ul{
+    padding-top: 40px;
 }
 
 .error li{
